added Makefile entry for build release

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -33,7 +33,7 @@ if (APPLE)
 	add_compile_definitions(BFM_OS_MAC)
 endif()
 
-add_compile_definitions(BALLOC_DEBUG)
+#add_compile_definitions(BALLOC_DEBUG)
 
 
 # ====== Raylib & Raygui Stuff ======
