using GuiGrid widget for canvas grid instead of drawing manually

--- a/bauriglyphmaker.ini
+++ b/bauriglyphmaker.ini
@@ -1,5 +1,5 @@
-VERSION                            0.1.0    # baurifontmaker version
-ENABLE_GRID                        -1       # Enable Grid
+VERSION                            0.1.0    # bauriglyphmaker version
+ENABLE_GRID                        1        # Enable Grid
 BTN_SIZE                           50       # Canvas button size
 GRID_THICKNESS                     2        # Grid Thickness
 TOOLBAR_HEIGHT                     50       # Toolbar Height
@@ -10,5 +10,5 @@ GRID_ROW                           8        # Grid Row Size
 GRID_COLOR                         35275007 # Grid Color
 CANVAS_CELL                        -336385  # Canvas Cell Color
 CANVAS_FILL                        35275007 # Canvas Fill Color
-# baurifontmaker config
+# bauriglyphmaker config
 #
